2005-07-05  Diego Gonzalez  <diego@pemas.net

	Patch by Jaap A. Haitsma <jaap@haitsma.org>

	* gnome-about-me.c: Remove use of bonobo, we don't need it.
	* gnome-about-me.c: Reorder some of the code and simplify file
	  chooser, also avoid having more than on instance of the 
	  file chooser dialog opened.
	* gnome-about-me.glade: remove some garbage that was left
	* gnome-about-me.desktop.in.in: set the correct bugzilla component
	  and icon.
	* Makefile.am: fix so that the custom dialog works in glade
	  (bug 309353)
	* Set dialog icon (bug 309342)

2005-07-05  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am: fix the list of desktop files for the tarball.
	* gnome-about-me.desktop.in.in: fix the component.

2005-07-05  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am: clean the desktop file.

2005-07-05  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am: fix the list of source files.

2005-06-23  Diego Gonzalez <diego@pemas.net>

	* gnome-about-me-password.c (gnome_about_me_password):
	  Fix another crasher

2005-06-22  Diego Gonzalez <diego@pemas.net>

	* Makefile.am: remove cracklib
	* gnome-about-me-password.c (passdlg_check_password_timeout_cb): 
	  remove dependencies on cracklib
	* cracklib/*: remove it

2005-06-21  Diego Gonzalez <diego@pemas.net>

	* gnome-about-me.c: Improve some error messages
	  about_me_error: new function
	* (about_me_load_info): Avoid crashing when switching to the Address tab
	* (about_me_commit): generate a good file_as field, code taken from evolution

2005-06-15  Diego Gonzalez <diego@pemas.net>

	* gnome-about-me.glade: Change the look of the "change Password"
	  dialog.
	* gnome-about-me-password.c: Change completely the inner workings
	  and add a way to meausure the quality of the password.
	* cracklib/*: code from cracklib2 to check the quality of the
	  password.

	Several other changes...

2005-05-16  Olav Vitters <olav@bkor.dhs.org>

	* gnome-about-me.glade: Remove garbage text. Patch by Benjamin